[tool.poetry]
name = "pyxkcd"
version = "0.1.0"
description = "A simple CLI to fetch XKCD comics"
authors = ["Nabarun Pal <pal.nabarun95@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pyxkcd" },
]

[tool.poetry.scripts]
xkcd = 'pyxkcd.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
term-image = "^0.4.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
